# olake-tui

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci.yml  docs.yml
cmd/olake-tui/: main.go
cmd/screenshot/: main.go
docs/: BFF_COMPARISON.md
helm/: values-olake-override.yaml
helm/olake-tui/: Chart.yaml  values.yaml
helm/olake-tui/templates/: _helpers.tpl  migrate-job.yaml
internal/app/: app.go  app_test.go  keys.go
internal/service/: interface.go  logs.go  migrate.go  mock.go  releases.go  schema.go  service.go  service_test.go
internal/ui/: confirm.go  confirm_test.go  connector_forms.go  dashboard.go  dest_detail.go  destinations.go  entity_form.go  forms.go  job_detail.go  job_logs.go  job_settings.go  job_wizard.go  jobs.go  login.go  login_test.go  modals.go  settings.go  source_detail.go  sources.go  streams.go  streams_test.go  styles.go
screenshots/: screen_01.txt  screen_02.txt  screen_03.txt  screen_04.txt  screen_05.txt  screen_06.txt  screen_07.txt  screen_08.txt  screen_09.txt  screen_10.txt
site/: hugo.toml
site/content/: _index.md
src/: app.rs
src-rust-archive/: event.rs  main.rs
src-rust-archive/olake/: mod.rs  types.rs
src-rust-archive/ui/: dashboard.rs  destinations.rs  job_logs.rs  jobs.rs  login.rs  mod.rs  source_form.rs  sources.rs
src/olake/: client.rs  types.rs
src/ui/: confirm_dialog.rs  dashboard.rs  destination_form.rs  destinations.rs  jobs.rs  mod.rs  sources.rs
tests/compat/: compat_test.go  docker-compose.test.yml
(+32 files in other folders)
