[package]
name = "olake-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = { version = "1.50.0", features = ["full"] }
url = "2"
